--- a/src/pages/SignUp/index.astro
+++ b/src/pages/SignUp/index.astro
@@ -3,236 +3,294 @@ import Layout from '../../layouts/Layout.astro';
 
 ---
 
-<Layout title="SignUp">
-    <div id="Status">Only Numbers through 1-4</div>
-    <div id="SignUp">
-        <div class="Title">Sign Up</div>
-        <input placeholder="Full Name" type="text">
-        <input placeholder="Password" type="password">
-        <input placeholder="Password" type="password">
-        <div>NS<input type="number" id="Year3321" min="1" max="4"></div>
-        <input type="submit">
-    </div>
+<Layout title="Sign Up">
+    <div id="Status"></div>
+    <a id="hiddenRedirectionBecauseAstroOnlyDoesThisNow" href="/Dashboard/Home" style="display: none;">this is supposed to be hidden</a>
+    <span>
+        <div id="SignUp" class="sanchez-regular">
+            SignUp
+            <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" style="top:100%; position:absolute; width: 80px; height: 80px;">
+        </div>
+        <form id="The-SignUp-Form">
+            <div class="SignUp-form">
+                <div class="input-group">
+                    <label for="username"></label>
+                    <input placeholder="Saul Sanchez" type="text" id="username" name="username" required aria-required="true" class="input-text-large">
+                </div>
+                <label for="Email"></label>
+                <div class="input-group">
+                    <input placeholder="18000644@parlierusd.org" type="email" style="font-size: 20px;font-weight:540;" autocomplete="email">
+                </div>
+                <div class="input-group password-container"  style="padding-down: 50px;">
+                    <label for="password"></label>
+                    <input placeholder="Parlier1" type="password" id="password" name="password"  class="input-text-large" autocomplete="current-password">
+                    <div class="password-checkbox">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Show.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Hidden.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;">
+                    </div>
+                </div>
+                <div class="input-group" style="padding-top: 50px;">
+                    <button class="sanchez-regular">SignUp</button>
+                </div>
+            </div>
+        </form>
+    </span>
     <a href="/Dashboard/">
-    <div id="Backtologin" >
-        <div class="CCCw">Login</div>
-    </div>
+        <div id="BacktoSignUp" >
+            <div class="CCCw">Login</div>
+        </div>
     </a>
 </Layout>
+<script>
+    
+</script>
+<!-- screw this im setting the default language to js -->
+<script lang="js" >
 
-<style>
-    #Status{
-        left: 50%;
-        transform: translate(-50%,0%);
-        color: white;
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
+    // Don't touch Plaes
+    document.querySelector('.password-checkbox').addEventListener('click', function() {
+        var x = document.getElementById("password");
+        var showIcon = document.querySelector('.hide-icon');
+        var hideIcon = document.querySelector('.show-icon');
 
-        position: absolute;
-        top: 25px;
-        padding-left: 15px;
-        padding-right: 15px;
+        if (x.type === "password") {
+            x.type = "text";
+            showIcon.style.display = 'block';
+            hideIcon.style.display = 'none';
+        } else {
+            x.type = "password";
+            showIcon.style.display = 'none';
+            hideIcon.style.display = 'block';
+        }
+    });
 
-        background-color: navy;
-        transition: ease-in 450ms;
-    }
-    #SignUp{
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: whitesmoke;
-        z-index: 99;
-        padding: 10px;
+</script>
+
+
+    <style>
+
+        #Status{
+            left: 50%;
+            transform: translate(-50%,0%);
+            color: white;
+            font-family: "Sanchez", serif;
+            font-weight: 400;
+            font-style: normal;
+
+            position: absolute;
+            top: 25px;
+            padding-left: 15px;
+            padding-right: 15px;
+
+            background-color: navy;
+            transition: ease-in 450ms;
+
+        }
+        button {
+            font-size: 20px;
+            padding: 10px;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            background: linear-gradient(300deg, #105c69, #3c9d9e, #7db5b6, #c8dae5);
+            border-radius: 5px;
+            position: relative;
+            z-index: 1;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        button:hover {
+            transform: scale(1.05); 
+            box-shadow: 15px 15px 20px rgba(0,0,0,0.19), 0 10px 10px rgba(0,0,0,0.23);
+        }     
+        button:active{
+            transform: scale(.90); 
+            box-shadow: 0px 0px 0px rgba(0,0,0,0); 
+        }
+    #SignUp {
+            padding: 10px;
+            position: relative;
+            font-size: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: start;
+            border-radius: 10px;
+            z-index: 99;
+            top: 0%;
+            width: 30%;
+
+            opacity: 70%;
+        }
+
+        span {
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: whitesmoke;
+            z-index: 99;
+            padding: 10px;
+            color: rgb(0, 0, 0);
+            width: calc(30% - 25px);
+            height: calc(80% - 25px);
+            display: grid;
+            justify-items: center;
+            align-items: start;
+            border-radius: 10px;
+
+            box-shadow: 0 0 1rem #0003;
+            background-color: #ffffff26;
+            backdrop-filter: blur(5px);
+        }
+        img{
+            user-select: none;
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+			-webkit-user-drag: none;
+			-moz-user-drag: none;
+			-ms-user-drag: none;
+        }
+
+        .SignUp-form {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 10px;
+
+            min-width: 226.5px;
+            min-height: 253.5;
+        }
+
+        .input-group {
+            display: flex;
+            flex-direction: column;
+            gap: 0px;
+        }
+        .input-group input[type="text"],
+        .input-group input[type="password"],
+        .input-group input[type="email"]  {
+            width: 100%;
+            height: 40px;
+          outline: none;
+        }
+        .input-group input[type="text"]::placeholder,
+        .input-group input[type="password"]::placeholder,
+        .input-group input[type="email"]::placeholder {
         color: rgb(0, 0, 0);
-        width: calc(30% - 25px);
-        height: calc(80% - 25px);
-        display: grid;
-        justify-items: center;
-        align-items: start;
-        border-radius: 10px;
+        opacity: 1; 
+        }
 
-        box-shadow: 0 0 1rem #0003;
-        background-color: #ffffff26;
-        backdrop-filter: blur(5px);
+        .input-group input[type="text"]::-ms-input-placeholder,
+        .input-group input[type="password"]::-ms-input-placeholder,
+        .input-group input[type="email"]::-ms-input-placeholder { 
+        color: rgb(0, 0, 0);
+        background: none !important;
+        }
+        .input-text-large {
+            font-size: 24px;
+        }
+        .input-group input[type="text"],
+        .input-group input[type="password"],
+        .input-group input[type="email"] {
+            background: none;
+            border: double;
+            border-top: none;
+            border-left: none;
+            border-right: none;
 
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    .Title{
-        padding: 10px;
-        position: relative;
-        font-size: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: start;
-        border-radius: 10px;
-        z-index: 99;
-        top: 0%;
-        width: 90%;
+            color: #000;
+        }
+        input:-webkit-autofill ,
+        input:-webkit-autofill:hover,
+        input:-webkit-autofill:focus,
+        input:-webkit-autofill:active {
+            background: none !important;
+        }
+        input:-moz-autofill {
+            background-image: none !important;
+            background-color: transparent !important;
+        }
 
-        opacity: 70%;
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    .sanchez-regular {
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    .sanchez-regular-italic {
+        .sanchez-regular {
+            font-family: "Sanchez", serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+        .sanchez-regular-italic {
         font-family: "Sanchez", serif;
         font-weight: 400;
         font-style: italic;
-    }
-    {
-        display: flex;
-        flex-direction: column;
-        gap: 0px;
-    }
-    input[type="text"],
-    input[type="password"] {
-        width: 100%;
-        height: 40px;
-        outline: none;
+        }
+        .password-checkbox{
+            min-height: 24px;
+            min-width: 254px;
 
-        font-size:30px;
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    input[type="number"]{
-        outline: none;
-        width: 11px;
-        
-        font-size: 17px;
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    /* Chrome, Safari, Edge, Opera */
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
+            filter: invert(100%);
 
-    /* Firefox */
-    input[type=number] {
-        -moz-appearance: textfield;
-    }
-    input[type="text"]::placeholder,
-    input[type="password"]::placeholder,
-    input[type="number"]::placeholder {
-        color: rgb(0, 0, 0);
-        opacity: 1; 
+            transition: 150ms ease-in-out;
+        }
+        .password-checkbox:active img{
+            transition: 50ms ease-in-out;
+        }
+        .password-checkbox:active img{
+            opacity: 0.7;
+            transform: scale(0.9);
+        }
+        #BacktoSignUp{
+            position:absolute;
+            width: 20px;
+            height: 200px;
 
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
+            display: flex;
+            border-top-right-radius:10px;
+            border-bottom-right-radius:10px;
 
-    input[type="text"]::-ms-input-placeholder,
-    input[type="password"]::-ms-input-placeholder,
-    input[type="number"]::-ms-input-placeholder { 
-        color: rgb(0, 0, 0);
-        background: none !important;
-
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    .input-text-large {
-        font-size: 24px;
-    }
-    input[type="text"],
-    input[type="password"],
-    input[type="number"] {
-        background: none;
-        border: double;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-
-        color: #000;
-
-        font-family: "Sanchez", serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    input:-webkit-autofill ,
-    input:-webkit-autofill:hover,
-    input:-webkit-autofill:focus,
-    input:-webkit-autofill:active {
-        background: none !important;
-    }
-    input:-moz-autofill {
-        background-image: none !important;
-        background-color: transparent !important;
-    }
-    #Backtologin{
-        position:absolute;
-        width: 0;
-        height: 0;
-        border-right: 150px solid transparent;
-
-        border-bottom: 200px solid #0000808f;
+            box-shadow: 0 0 1rem #0003;
+            background-color: #ffffff26;
+            backdrop-filter: blur(5px);
 
 
-        left:0px;
-        bottom:0px;
-    }
-    .CCCw{
-        color:white;
+            left:0px;
+            bottom:20px;
+            --font-size-CCw: 20px;
 
-        margin-top:50px;
-        margin-left:30px;
 
-        font-family:Sanchez;
-        font-size:35px;
+            align-items: center;
+            justify-content: center;
+
+            border: #ffffff26 solid 5px;
+            background-clip: border-box;
+            border-left:none;
+
+            transition:250ms cubic-bezier(0.5, -1.05, 0.11, 1.71);
+        }
+        .CCCw {
+        color: white;
+        font-family: Sanchez;
+        font-size: var(--font-size-CCw);
         transform: rotate(90deg);
+        transition: font-size 250ms cubic-bezier(0.5, -1.05, 0.11, 1.71);
     }
+
+    #BacktoSignUp:hover {
+        width: 50px;
+        --font-size-CCw: 35px;
+        transition: width 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71), --font-size-CCw 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71),; 
+    }
+    
+    </style>
+
+<!--
+<Layout title='SignUp'></Layout>
+<body>
+<Box></Box>
+<style>
+body {
+    background-image: url('https://images.unsplash.com/photo-1511307172940-38ec278f7ce2?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 </style>
-<script lang="js">
-    document.addEventListener('DOMContentLoaded', () => {
-        const inputField = document.getElementById('Year3321');
-        const statusDiv = document.getElementById('Status');
-
-        inputField.addEventListener('keydown', (e) => {
-            // Prevent default behavior for certain keys
-            if ([8, 9, 13, 16, 17, 18, 20].includes(e.keyCode)) {
-                return;
-            }
-
-            // Allow only numbers between 1 and 4
-            if ((e.key >= 1 && e.key <= 4) || e.key === 'ArrowUp' || e.key === 'ArrowDown') {
-                return;
-            }
-
-            e.preventDefault();
-        });
-
-        inputField.addEventListener('input', () => {
-            const value = parseInt(inputField.value);
-            if (isNaN(value) || value < 1 || value > 4) {
-                inputField.value = '';
-                showStatusMessage("Only Numbers through 1-4");
-            } else {
-                hideStatusMessage();
-            }
-        });
-    });
-
-    function showStatusMessage(message) {
-        document.getElementById('Status').textContent = message;
-        document.getElementById('Status').style.visibility = 'visible';
-    }
-
-    function hideStatusMessage() {
-        document.getElementById('Status').style.visibility = 'hidden';
-    }
-</script>
+</body>
+-->
