--- a/src/components/ReQestMenu/ItemMenu.astro
+++ b/src/components/ReQestMenu/ItemMenu.astro
@@ -68,11 +68,14 @@ function loadSavedSelections() {
 document.getElementById('clearSelectionBtn')!.addEventListener('click', clearSelections);
 
 function clearSelections() {
+        //@ts-ignore is going to be chaos
     const selectedItems: never[] = []; // THis is not a Error
     const ribbonBoxes = document.querySelectorAll('.a-ribbon-listing');
 
     ribbonBoxes.forEach(box => {
+        //@ts-ignore lol
         box.style.backgroundColor = 'lightblue'; // THis is not a Error
+        //@ts-ignore lol ha
         box.dataset.selected = 'false'; // THis is not a Error
     });
 
