--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import { API_URL } from 'astro:env/client';
     </span>
     <a href="/Dashboard/SignUp">
         <div id="Backtologin" >
-            <div class="CCCw">Login</div>
+            <div class="CCCw">SignUp</div>
         </div>
     </a>
 </Layout>
