--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, backgroundImg = "" } = Astro.props;
 		<style>
 			body{
 				background: url('https://images.unsplash.com/photo-1511307172940-38ec278f7ce2?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-				background-repeat: repeat;
+				••••••••••••		background-repeat: repeat;
 				background-size: cover;
 				background-position: center center;
 
