--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -53,7 +53,7 @@ import { API_URL } from 'astro:env/client';
             </div>
         </div>
         <div id="tooltip-container">
-            <span id="tooltip">↑ Click That ↑</span>
+            <span id="tooltip">↑ Click That for Menu ↑</span>
         </div>
     </header>
     <script lang="js">
@@ -221,7 +221,7 @@ import { API_URL } from 'astro:env/client';
 
         #tooltip {
             opacity: 1;
-            width: 90px;
+            width: 140px;
             text-align: center;
         }
         #User-Info{
