--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,10 @@ import { API_URL } from 'astro:env/client';
         </form>
     </span>
     <a href="/Dashboard/SignUp">
+        <div id="hoverfix">
         <div id="Backtologin" >
             <div class="CCCw">SignUp</div>
+        </div>
         </div>
     </a>
 </Layout>
@@ -305,6 +307,7 @@ import { API_URL } from 'astro:env/client';
 
             left:0px;
             bottom:20px;
+            translate: 0% 12%;
             --font-size-CCw: 20px;
 
 
@@ -317,6 +320,24 @@ import { API_URL } from 'astro:env/client';
 
             transition:250ms cubic-bezier(0.5, -1.05, 0.11, 1.71);
         }
+        #hoverfix{
+            position:absolute;
+            width: 50px;
+            height: 200px;
+
+            display: flex;
+            border-top-right-radius:10px;
+            border-bottom-right-radius:10px;
+            background-color: none;
+
+
+            left:0px;
+            bottom:20px;
+
+            border: none solid 5px;
+            background-clip: border-box;
+            border-left:none;
+        }
         .CCCw {
         color: white;
         font-family: Sanchez;
@@ -324,14 +345,13 @@ import { API_URL } from 'astro:env/client';
         transform: rotate(90deg);
         transition: font-size 250ms cubic-bezier(0.5, -1.05, 0.11, 1.71);
     }
-    cursor{
-        color: #ff0000;
-    }
 
-    #Backtologin:hover {
-        width: 50px;
-        --font-size-CCw: 35px;
-        transition: width 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71), --font-size-CCw 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71),; 
+    #hoverfix:hover {
+        #Backtologin {
+            width: 50px;
+            --font-size-CCw: 35px;
+            transition: width 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71), --font-size-CCw 300ms cubic-bezier(0.5, -1.05, 0.11, 1.71),; 
+        }
     }
     
     </style>
