--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -120,7 +120,8 @@
     <script lang="js">
         const digits = document.querySelectorAll('.digit');
         let lastFlippedIndex = null;
-        const titles = ["‎", "404"];
+        const titles = ["DashBoard | ‎", "DashBoard | 404"];
+        // const titles = ["DashBoard | ‎","DashBoard | 4","DashBoard | 40","DashBoard | 404","DashBoard | 40","DashBoard | 4"];
         let currentIndex = 0;
         
         let intervalId;
