--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -15,7 +15,7 @@ import { API_URL } from 'astro:env/client';
       <div class="box">
         <File></File>
         <button id="Buttonn">Open Items Selector</button>
-        <button id="SubmitRibbons">Sumite</button>
+        <input type="submit" id="SubmitRibbons"></input>
         </div>
       </div>
     </div>
