--- a/src/components/ReQestMenu/file_upload.astro
+++ b/src/components/ReQestMenu/file_upload.astro
@@ -3,7 +3,7 @@
 <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
   <div class="image-upload-wrap">
-    <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/.remove-image" />
+    <input class="file-upload-input" required type='file' onchange="readURL(this);" accept="image/.remove-image" />
     <div class="drag-text">
       <h3>Drag and drop a file or select add Image</h3>
     </div>
