--- a/src/pages/Test/index.astro
+++ b/src/pages/Test/index.astro
@@ -1,2 +1,30 @@
 
-  
+<html>
+    <head>
+      <meta name="google-signin-client_id" content="173246410645-dvhdj5hjj5jsa1decl670sb2k51n2mmt.apps.googleusercontent.com">
+    </head>
+    <body>
+      <div id="my-signin2"></div>
+      <script lang="js">
+        function onSuccess(googleUser) {
+          console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+        }
+        function onFailure(error) {
+          console.log(error);
+        }
+        function renderButton() {
+          gapi.signin2.render('my-signin2', {
+            'scope': 'profile email',
+            'width': 240,
+            'height': 50,
+            'longtitle': true,
+            'theme': 'dark',
+            'onsuccess': onSuccess,
+            'onfailure': onFailure
+          });
+        }
+      </script>
+    
+      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    </body>
+    </html>
