--- a/src/pages/Test/index.astro
+++ b/src/pages/Test/index.astro
@@ -21,7 +21,7 @@
             console.log('ID: ' + profile.getId()); // Do not send to your backend!
             console.log('Name: ' + profile.getName());
             console.log('Image URL: ' + profile.getImageUrl());
-            console.log('Email: ' + profile.getEmail());
+            alert('Email: ' + profile.getEmail());
 
             document.getElementById('userInfo').textContent =
                 'ID: ' + profile.getId() + '\n' +
