--- a/src/pages/Test/index.astro
+++ b/src/pages/Test/index.astro
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="173246410645-dvhdj5hjj5jsa1decl670sb2k51n2mmt.apps.googleusercontent.com">
 </head>
 <body>
   <div id="my-signin2"></div>
