--- a/src/components/menu/Link.astro
+++ b/src/components/menu/Link.astro
@@ -19,7 +19,10 @@ const { title ,link = title} = Astro.props
 </script>
 
 <span>
-    <a href=`/Dashboard/${link}`> <div class="textsss">{title}</div> </a>
+    <a href=`/Dashboard/${link}`>
+         <div class="textsss">{title}</div> 
+         <div class="side-icon"></div>
+    </a>
 </span>
 
 
@@ -32,6 +35,10 @@ const { title ,link = title} = Astro.props
 </script>
 
 <style>
+    .side-icon{
+        height: 10px;
+        width: 10px;
+    }
     span{
         display: grid;
         position: relative;
@@ -71,10 +78,10 @@ const { title ,link = title} = Astro.props
     span a:hover{
         background-color: var(--nav-bg-color);
 
-        box-shadow: -15px 0px var(--nav-box-hover);
+        box-shadow: -50px 0px var(--nav-box-hover);
         padding-right: 20px;
 
-        translate: 5% 0%;
+        translate: 10% 0%;
         .textsss{
             transform: skew(-15deg);
         }
