--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -81,6 +81,8 @@ img {
     align-items: center;
     justify-content: center;
 
+    cursor:pointer;
+
     column-gap: 5px;
     box-shadow: 0 10px 5px var(--nav-bg-color), 0px -40px 5px #0000a4;
 
