--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -109,6 +109,13 @@
 
             cursor: pointer;
         }
+        h3 div:hover{
+            transform: scale(1.2);
+
+            h3{
+                gap: 9px;
+            }
+        }
         h3 a{
             text-decoration: none;
             color: navy;
