--- a/src/components/ReQestMenu/file_upload.astro
+++ b/src/components/ReQestMenu/file_upload.astro
@@ -11,7 +11,7 @@
   <div class="file-upload-content">
     <img class="file-upload-image" src="#" alt="your image" />
     <div class="image-title-wrap">
-      <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+      <button type="button" onclick="removeUpload()" class="remove-image" id="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
     </div>
   </div>
 
