--- a/src/pages/SignUp/index.astro
+++ b/src/pages/SignUp/index.astro
@@ -44,10 +44,9 @@ import Layout from '../../layouts/Layout.astro';
         </div>
     </a>
 </Layout>
-<script>
-    
+<script lang="js">
+    // Crazy Cool Sign Up Goes Here
 </script>
-<!-- screw this im setting the default language to js -->
 <script lang="js" >
 
     // Don't touch Plaes
