--- a/src/components/ReQestMenu/file_upload.astro
+++ b/src/components/ReQestMenu/file_upload.astro
@@ -2,7 +2,7 @@
 
 <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
-  <div class="image-upload-wrap">
+  <div class="image-upload-wrap" id="image-upload-wrap">
     <input class="file-upload-input" required type='file' onchange="readURL(this);" accept="image/.remove-image" />
     <div class="drag-text">
       <h3>Drag and drop a file or select add Image</h3>
