--- a/src/pages/SignUp/index.astro
+++ b/src/pages/SignUp/index.astro
@@ -15,14 +15,14 @@ import Layout from '../../layouts/Layout.astro';
             <div class="SignUp-form">
                 <div class="input-group">
                     <label for="username"></label>
-                    <input placeholder="Saul Sanchez" type="text" id="username" name="username" required aria-required="true" class="input-text-large" >
+                    <input placeholder="Full Name" type="text" id="username" name="username" required aria-required="true" class="input-text-large" >
                 </div>
                 <label for="Email"></label>
                 <div class="input-group">
-                    <input placeholder="********@parlierusd.org" type="email" style="font-size: 20px;font-weight:540;" autocomplete="email">
+                    <input placeholder="Email@parlierusd.org" type="email" style="font-size: 20px;font-weight:540;" autocomplete="email">
                 </div>
                 <div class="input-group password-container"  style="padding-down: 50px;">
-                    <label for="password"></label>
+                    <label  for="password"></label>
                     <input placeholder="Password" type="password" id="password" name="password"  class="input-text-large" autocomplete="current-password">
                     <div class="password-checkbox">
                         <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Show.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
